k8s/finance-demo/demo-app/demo-streams/streams-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streams
  labels:
    app: streams
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streams
  template:
    metadata:
      labels:
        app: streams
    spec:
      containers:
        - name: streams
          image: localhost:5000/demo-streams:0.0.1
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "750m"
