k8s/finance-demo/demo-app/demo-streams/streams-service.yml
apiVersion: v1
kind: Service
metadata:
  name: streams
spec:
  selector:
    app: streams
  ports:
    - port: 8080
      targetPort: 8080
