k8s/finance-demo/demo-app/demo-streams/streams-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streams-ingress
  labels:
    name: streams-ingress
spec:
  rules:
    - host: demo-streams.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: streams
                port:
                  number: 8080
